--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 description = "AI Agent using ADK"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "google-adk>=0.4.0",
+]
