--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -5,5 +5,6 @@ description = "Slackbot"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google-cloud-aiplatform[agent-engines]>=1.91.0",
     "slack-bolt>=1.23.0",
 ]
