--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -13,4 +13,4 @@ WORKDIR /app
 RUN uv sync --frozen --no-cache
 
 # Run the application.
-CMD ["uv", "run", "uvicorn", "main:api", "--port", "8080", "--host", "0.0.0.0", "--log-level", "info"]
+CMD ["uv", "run", "uvicorn", "main:api", "--port", "8080", "--host", "0.0.0.0"]
