--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.13-slim
 # Allow statements and log messages to immediately appear
-ENV PYTHONUNBUFFERED True
+ENV PYTHONUNBUFFERED=True
 
 # Install uv.
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
