--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.115.12",
     "google-cloud-aiplatform[agent-engines]>=1.91.0",
+    "markdown-to-mrkdwn>=0.2.0",
     "slack-bolt>=1.23.0",
     "uvicorn>=0.34.2",
 ]
